Feat(Java): Rework DefaultProviderDataAccessor to limit scope and allow users to be synchronized outside of projects